frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      nodeSelector:
        tier: frontend
      containers:
      - name: react
        image: nginx:alpine
        command: ["/bin/sh", "-c", "echo '<h1>Hello from React on Dev System</h1>' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
